# praetorian-cli

./: .gitignore  .graphifyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONVERSATION_TEST.md  LICENSE  MANIFEST.in  README.md  TERMINOLOGY.md  output.txt  praetorian-cli  prompt.txt  pyproject.toml  setup.cfg  test_conversation.py  test_mcp_server.py  test_tool_execution.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/checkpoints/: 1755810152.json  1755810153.json  1755810159.json  1755810160.json  1755810166.json  1755810167.json  1755810173.json  1755810174.json  1755810181.json  1755810182.json  1755810210.json  1755810211.json  1755810226.json  1755810227.json  1755811206.json  1755811472.json  1755811485.json  1755811486.json  1755811496.json  1755811497.json  1755811507.json  1755811508.json  1755811518.json  1755811519.json  1755811531.json  1755811532.json  1755811550.json  1755811551.json  1755811571.json  1755811572.json  1755811580.json  1755811581.json  1755811586.json  1755811587.json  1755811592.json  1755811593.json  1755811599.json  1755811600.json  1755811605.json  1755811606.json  (+22 more)
.github/: pull_request_template
.github/workflows/: claude-code.yml  codex-code.yml  gemini-code.yml  graphify-graph.yml  publish-pypi.yml
.hive-mind/: config.json  hive.db
.swarm/: memory.db  memory.db-shm  memory.db-wal
docs/: configure.md  console.md  plugin-development.md  publishing.md  script-development.md  terminology.md  testing.md  webpage-linking.md
docs/specs/: 2026-03-30-critfinder-design.md  2026-05-19-module-system-design.md
modules/: registry.json
praetorian_cli/: catalog.py  cli.py  main.py  registry.py
praetorian_cli/.swarm/: memory.db
scripts/: test_bulk_upsert.py
tools/: webpage_viewer.py
(+292 files in other folders)
