[metadata]
name = praetorian-cli
version = 1.0.3
author = Praetorian
author_email = research@praetorian.com
description = For interacting with the Chariot API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/praetorian-inc/praetorian-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    click > 8
    boto3
    requests
[options.entry_points]
console_scripts =
    praetorian = praetorian_cli.cli:cli
