[metadata]
name = praetorian-cli
version = 2.0.7
author = Praetorian
author_email = support@praetorian.com
description = For interacting with the Chariot API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/praetorian-inc/praetorian-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    click >= 8.1.7
    boto3 >= 1.34.0
    requests >= 2.31.0
    pytest >= 8.0.2

[options.entry_points]
console_scripts =
    praetorian = praetorian_cli.main:main
